--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Vehicle_Service_System
 excludes=
+file.reference.bridj-0.7.0.jar=lib\\qr\\bridj-0.7.0.jar
+file.reference.core-3.3.0.jar=lib\\qr\\core-3.3.0.jar
+file.reference.javase-3.3.0.jar=lib\\qr\\javase-3.3.0.jar
 file.reference.jna-5.5.0.jar=C:\\Users\\Umindu\\Desktop\\jna-5.5.0.jar
 file.reference.jna-5.5.0.jar-1=lib\\jna-5.5.0.jar
 file.reference.miglayout-4.0.jar=C:\\Users\\Umindu\\Desktop\\miglayout-4.0.jar
@@ -40,8 +43,10 @@ file.reference.miglayout-4.0.jar-1=lib\\miglayout-4.0.jar
 file.reference.mssql-jdbc-12.4.2.jre11.jar=C:\\Users\\Umindu\\Downloads\\sqljdbc_12.4\\enu\\jars\\mssql-jdbc-12.4.2.jre11.jar
 file.reference.mssql-jdbc-12.4.2.jre11.jar-1=lib\\mssql-jdbc-12.4.2.jre11.jar
 file.reference.rs2xml.jar=lib\\rs2xml.jar
+file.reference.slf4j-api-1.7.2.jar=lib\\qr\\slf4j-api-1.7.2.jar
 file.reference.swing-jnafilechooser.jar=C:\\Users\\Umindu\\Desktop\\swing-jnafilechooser.jar
 file.reference.swing-jnafilechooser.jar-1=lib\\swing-jnafilechooser.jar
+file.reference.Webcam.jar=lib\\qr\\Webcam.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -53,7 +58,12 @@ javac.classpath=\
     ${file.reference.swing-jnafilechooser.jar-1}:\
     ${file.reference.rs2xml.jar}:\
     ${file.reference.miglayout-4.0.jar}:\
-    ${file.reference.miglayout-4.0.jar-1}
+    ${file.reference.miglayout-4.0.jar-1}:\
+    ${file.reference.Webcam.jar}:\
+    ${file.reference.bridj-0.7.0.jar}:\
+    ${file.reference.core-3.3.0.jar}:\
+    ${file.reference.javase-3.3.0.jar}:\
+    ${file.reference.slf4j-api-1.7.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
