--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -63,7 +63,8 @@ javac.classpath=\
     ${file.reference.bridj-0.7.0.jar}:\
     ${file.reference.core-3.3.0.jar}:\
     ${file.reference.javase-3.3.0.jar}:\
-    ${file.reference.slf4j-api-1.7.2.jar}
+    ${file.reference.slf4j-api-1.7.2.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
